[workspace]

members = [
  "smoke_test",
  "prime_time",
  "means_to_an_end",
  "means_to_an_end_async",
  "budget_chat",
  "budget_chat_async",
  "unusual_database_program",
  "mob_in_the_middle",
  "speed_demon_async",
  "line_reversal_async",
  "insecure_sockets_layer_async",
  "job_centre_async",
]
