[package]
name = "pest_control_async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
futures-util = { version = "0.3.28", features = ["sink"] }
itertools = "0.11.0"
nom = "7.1.3"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
